--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pydantic==1.10.2
 pymongo==4.3.2
 pyparsing==3.0.9
 pytest==7.1.3
+pytest-mock==3.10.0
 rfc3986==1.5.0
 sniffio==1.3.0
 starlette==0.20.4
