--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,48 @@
 anyio==3.6.2
 attrs==22.1.0
 autopep8==1.7.0
+cachetools==5.2.0
 certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 dnspython==2.2.1
 fastapi==0.85.1
+google-api-core==2.10.2
+google-auth==2.14.1
+google-cloud-pubsub==2.13.11
+googleapis-common-protos==1.57.0
+grpc-google-iam-v1==0.12.4
+grpcio==1.50.0
+grpcio-status==1.50.0
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 idna==3.4
 iniconfig==1.1.1
+memory-profiler==0.60.0
 packaging==21.3
 pluggy==1.0.0
+proto-plus==1.22.1
+protobuf==4.21.9
+psutil==5.9.3
 py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.9.1
 pydantic==1.10.2
 pymongo==4.3.2
 pyparsing==3.0.9
 pytest==7.1.3
 pytest-mock==3.10.0
+requests==2.28.1
 rfc3986==1.5.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 starlette==0.20.4
 toml==0.10.2
 tomli==2.0.1
 typing_extensions==4.4.0
+urllib3==1.26.13
 uvicorn==0.19.0
